# cmake-helpers

./: .editorconfig  .gitignore  .markdownlint.json  CMakeLists.txt  GitHelpers.cmake  GoogleTestLoader.cmake  GoogleTestLoader.md  LICENSE  LogHelpers.cmake  LogHelpers.md  MessageHelpers.cmake  README.md  SetHelpers.cmake  SetHelpers.md
docs/: GitHelpers.md  GoogleTestLoader.md  LogHelpers.md  MessageHelpers.md  SetHelpers.md
tests/: CMakeLists.txt
tests/log_helpers/: CMakeLists.txt  custom_log_helpers_section_xxx_values.test.cmake  default_log_helpers_section_xxx_values.test.cmake  log_indent.test.cmake  log_section_begin.test.cmake  log_section_end.test.cmake  log_unindent.test.cmake
tests/set_helpers/: CMakeLists.txt
tests/set_helpers/set_if_defined/: CMakeLists.txt  accept_PARENT_SCOPE.test.cmake  dont_set_new_variable.test.cmake  set_existing_variable.test.cmake
tests/set_helpers/set_if_undefined/: CMakeLists.txt  accept_PARENT_SCOPE.test.cmake  dont_override_defined_variable.test.cmake  set_new_variable.test.cmake
tests/set_helpers/set_or_default/: CMakeLists.txt  accept_PARENT_SCOPE.test.cmake  set_using_default_literal.test.cmake  set_using_default_variable.test.cmake  set_using_source_variable.test.cmake
